--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -5,6 +5,7 @@
 
 \documentclass[kdmile,a4paper]{kdmile} % NOTE: kdmile is published on A4 paper
 \usepackage{graphicx,url}  % for using figures and url format
+\usepackage{wrapfig}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage[T1]{fontenc}   % avoids warnings such as "LaTeX Font Warning: Font shape 'OMS/cmtt/m/n' undefined"
@@ -62,6 +63,16 @@
 \renewcommand{\algorithmicfalse}{\textbf{falso}}
 \renewcommand{\algorithmicand}{\textbf{e}}
 \renewcommand{\algorithmicor}{\textbf{ou}}
+
+% Eventos salientes
+\newcommand{\tmon}{$alarme_{ON}$}
+\newcommand{\muon}{$musica_{ON}$}
+\newcommand{\muoff}{$musica_{OFF}$}
+\newcommand{\lion}{$luz_{ON}$}
+\newcommand{\beon}{$sino_{ON}$}
+\newcommand{\tmoff}{$alarme_{OFF}$}
+\newcommand{\lioff}{$luz_{OFF}$}
+\newcommand{\beoff}{$sino_{OFF}$}
 
 % Comando para espaçamento vertical no ambiente algorithm
 \newcommand{\GIMMESPACE}{\vspace{3.17 mm}}
@@ -169,68 +180,68 @@
 
 \maketitle
 
-% \Section{Introdução}
-% Problemas nos quais o agente deve tomar uma série de decisões
-% sequenciais podem ser resolvidos através de técnicas de Aprendizado
-% por Reforço \cite{rlsutton,rlczaba}, em que o agente recebe um
-% reforço numérico indicando a qualidade de cada ação tomada. Esse
-% processo de aprendizado ocorre por tentativa e erro, no qual o
-% agente alterna entre a \emph{aplicação} do conhecimento adquirido
-% até o momento para selecionar a melhor ação e a \emph{exploração} do
-% ambiente, onde o agente experimenta novas ações, aumentando o seu
-% conhecimento sobre o ambiente e o problema. Apesar do sucesso
-% apresentado na aplicação de técnicas AR a problemas reais
-% \cite{tesauro1995tdgammon,barto1996elevator,scardua2002optimal,da2006inverse,abbeel2007helicopter},
-% elas podem apresentar indesejada lentidão na obtenção das soluções
-% \cite{barto2003hrl}.
+\section{Introdução}
+Problemas nos quais o agente deve tomar uma série de decisões
+sequenciais podem ser resolvidos através de técnicas de Aprendizado
+por Reforço \cite{rlsutton,rlczaba}, em que o agente recebe um
+reforço numérico indicando a qualidade de cada ação tomada. Esse
+processo de aprendizado ocorre por tentativa e erro, no qual o
+agente alterna entre a \emph{aplicação} do conhecimento adquirido
+até o momento para selecionar a melhor ação e a \emph{exploração} do
+ambiente, onde o agente experimenta novas ações, aumentando o seu
+conhecimento sobre o ambiente e o problema. Apesar do sucesso
+apresentado na aplicação de técnicas AR a problemas reais
+\cite{tesauro1995tdgammon,barto1996elevator,scardua2002optimal,da2006inverse,abbeel2007helicopter},
+elas podem apresentar indesejada lentidão na obtenção das soluções
+\cite{barto2003hrl}.
  
-% Uma forma de mitigar essa lentidão é explorar características da
-% \emph{representação} do problema original que permitam a aplicação
-% de técnicas de otimização. Um exemplo disso é a utilização de
-% políticas parciais \cite{option1999}, que permitem que um problema
-% de AR originalmente com representação monolítica seja representado
-% de forma modular. Na nova representação, são determinados
-% sub-problemas componentes do problema original, permitindo o
-% aprendizado simultâneo da solução para o problema original e seus
-% sub-problemas. Quando o problema original possui uma estrutura
-% \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez
-% o mesmo sub-problema em momentos diferentes. Nesses casos, a
-% utilização de políticas parciais apresenta a vantagem de acelerar o
-% aprendizado por eliminar a necessidade de se aprender a solução para
-% o mesmo sub-problema mais de uma vez, permitindo o reuso do
-% conhecimento já adquirido na forma de políticas parciais
-% \cite{option1999} e dessa forma acelerando o aprendizado.
+Uma forma de mitigar essa lentidão é explorar características da
+\emph{representação} do problema original que permitam a aplicação
+de técnicas de otimização. Um exemplo disso é a utilização de
+políticas parciais \cite{option1999}, que permitem que um problema
+de AR originalmente com representação monolítica seja representado
+de forma modular. Na nova representação, são determinados
+sub-problemas componentes do problema original, permitindo o
+aprendizado simultâneo da solução para o problema original e seus
+sub-problemas. Quando o problema original possui uma estrutura
+\emph{hierárquica}, é comum o agente ter de resolver mais de uma vez
+o mesmo sub-problema em momentos diferentes. Nesses casos, a
+utilização de políticas parciais apresenta a vantagem de acelerar o
+aprendizado por eliminar a necessidade de se aprender a solução para
+o mesmo sub-problema mais de uma vez, permitindo o reuso do
+conhecimento já adquirido na forma de políticas parciais
+\cite{option1999} e dessa forma acelerando o aprendizado.
 
-% Entretanto, para que as políticas parciais possam ser utilizadas, há
-% a necessidade da definição de elementos cuja identificação pode não
-% ser imediata à apreciação do problema, podendo causar sobrecarga em
-% tempo de projeto. Para contornar esse revés, são estudadas técnicas
-% de descoberta automática de políticas parciais
-% \cite{stolle2002learning,bakker2004hierarchical,mcgovern2001automatic,imrl2004},
-% em que a definição das mesmas fica a cargo de um algoritmo
-% responsável por identificar sub-problemas e criar políticas parciais
-% para resolvê-los. Das diversas técnicas empregadas, pode ser
-% destacada a utilização de \emph{motivação intrínseca} em AR
-% \cite{imrl2004}, em que o agente recebe recompensas adicionais
-% através de um mecanismo interno associado a variações de
-% características do ambiente que lhe despertam \emph{marcado
-% interesse}. Nessas técnicas, o agente é codificado de forma a
-% associar sub-problemas a variações significativas de atributos
-% selecionados na descrição fatorada do estado, reduzindo o trabalho
-% de definição das políticas parciais à determinação dos atributos
-% relevantes para a identificação dos sub-problemas.
+Entretanto, para que as políticas parciais possam ser utilizadas, há
+a necessidade da definição de elementos cuja identificação pode não
+ser imediata à apreciação do problema, podendo causar sobrecarga em
+tempo de projeto. Para contornar esse revés, são estudadas técnicas
+de descoberta automática de políticas parciais
+\cite{stolle2002learning,bakker2004hierarchical,mcgovern2001automatic,imrl2004},
+em que a definição das mesmas fica a cargo de um algoritmo
+responsável por identificar sub-problemas e criar políticas parciais
+para resolvê-los. Das diversas técnicas empregadas, pode ser
+destacada a utilização de \emph{motivação intrínseca} em AR
+\cite{imrl2004}, em que o agente recebe recompensas adicionais
+através de um mecanismo interno associado a variações de
+características do ambiente que lhe despertam \emph{marcado
+interesse}. Nessas técnicas, o agente é codificado de forma a
+associar sub-problemas a variações significativas de atributos
+selecionados na descrição fatorada do estado, reduzindo o trabalho
+de definição das políticas parciais à determinação dos atributos
+relevantes para a identificação dos sub-problemas.
 
-% Essa técnica foi aplicada com sucesso na solução de um problema com
-% forte estrutura hierárquica \cite{imrl2004}, através da proposta de
-% um algoritmo que utiliza em conjunto múltiplas técnicas de
-% AR. Apesar da aprensentação detalhada do papel da motivação
-% intrínseca no aprendizado, não há uma investigação mais aprofundada
-% dos diversos componentes de aprendizado envolvidos algoritmo,
-% notadamente a estratégia de aplicação das políticas parciais
-% aprendidas. Neste trabalho, investigamos essa questão, apresentando
-% algumas propostas de estratégias para a aplicação das políticas
-% parciais aprendidas juntamente com a avaliação experimental de cada
-% uma delas e uma breve discussão teórica.
+Essa técnica foi aplicada com sucesso na solução de um problema com
+forte estrutura hierárquica \cite{imrl2004}, através da proposta de
+um algoritmo que utiliza em conjunto múltiplas técnicas de
+AR. Apesar da aprensentação detalhada do papel da motivação
+intrínseca no aprendizado, não há uma investigação mais aprofundada
+dos diversos componentes de aprendizado envolvidos algoritmo,
+notadamente a estratégia de aplicação das políticas parciais
+aprendidas. Neste trabalho, investigamos essa questão, apresentando
+algumas propostas de estratégias para a aplicação das políticas
+parciais aprendidas juntamente com a avaliação experimental de cada
+uma delas e uma breve discussão teórica.
 
 % \section{Fundamentos Teóricos}
 % Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
@@ -251,17 +262,19 @@
 \newcommand{\qb}{$\qbS$}
 \newcommand{\peumS}{p_1}
 \newcommand{\peum}{$\peumS$}
+\newcommand{\td}{\emph{top-down}}
+\newcommand{\bu}{\emph{bottom-up}}
 
 % Motivação
 
 % Empilhamento
 Para explorar a característica hierárquica presente nas políticas
-parciais de forma a acelerar o aprendizado, forneceu-se ao agente uma
-estrutura a ser utilizada para o armazenamento do histórico de
-utilização de políticas parciais de forma hierárquica através de uma
-pilha.  Durante o processo de aprendizado, a obtenção da próxima ação
-a ser executada pode ocorrer de forma aleatória ou de forma gulosa, na
-aplicação de \qb\ ou de uma política parcial.  Em cada um desses
+parciais de forma a acelerar o aprendizado, o algoritmo presente em
+\cite{imrl2004} foi adaptado para disponibilizar ao agente uma
+estrutura \pilha\ em forma de pilha para armazenar a hierarquia de
+políticas parciais utilizadas pelo agente.  No momento da obtenção da
+próxima ação, esta pode ser executada de forma aleatória ou gulosa (na
+aplicação de \qb\ ou de uma política parcial).  Em cada um desses
 momentos, caso a próxima ação selecionada seja uma política parcial
 $p_1$, esta é adicionada ao topo da pilha.  Dessa forma, um agente que
 inicia com uma pilha vazia $\pilhaS=[\ ]$ e obtém como próxima ação a
@@ -269,10 +282,6 @@ política parcial \peum\ resultará com $\pilhaS=[\peumS]$. Caso a
 aplicação de \peum\ sugira a execução de uma nova política parcial
 $p_2$, essa será então empilhada, resultando em $\pilhaS=[\peumS,
 p_2]$ e assim sucessivamente para novas políticas parciais.
-
-% Remoção topo-base
-\newcommand{\td}{\emph{top-down}}
-\newcommand{\bu}{\emph{bottom-up}}
 
 Uma política parcial é removida da pilha no momento em que seu
 objetivo é atingido pelo agente, ou seja, o evento saliente utilizado
@@ -305,7 +314,7 @@ políticas parciais estão em fase inicial de aprendizado.
 
 Dessa forma, foi implementado o mecanismo de exploração interna à
 política parcial no algoritmo através de escolha $\epsilon$-gulosa, em
-que o parâmetro $\ep \in [0,1]$ indica o percentual de exploração
+que o parâmetro $\epS \in [0,1]$ indica o percentual de exploração
 utilizado na aplicação da política parcial.  No momento da aplicação
 da política parcial, é sorteado um valor no intervalo $[0,1]$.  Caso
 esse valor sorteado seja maior que \ep\, o agente aplica a política
@@ -576,24 +585,72 @@ possíveis para o estado atual.
 % tendência de \emph{diminuição} dos valores recebidos para eventos
 % salientes repetidos.
 
-\section{Configuração Experimental}
-Para avaliar o desempenho da estratégia proposta, foram realizados
-conjuntos de experimentos onde o algoritmo implementado contempla as
-modificações concernentes a cada estratégia.
+\section{Avaliação Experimental}
+O domínio utilizado na avaliação experimental foi o \emph{Playroom}
+\cite{imrl2004}, em que o agente se econtra em um reticulado
+$5\times5$ e deve descobrir como ativar um \emph{alarme} interagindo
+com objetos aí presentes.  O agente é composto de um \emph{olho}, uma
+\emph{mão} e um \emph{alvo} e possui sempre disponíveis as seguintes
+ações: apontar \emph{olho} para a célula onde se encontra a \emph{mão}
+ou para a célula onde se encontra o \emph{alvo}; mover a \emph{mão} ou
+o \emph{alvo} para a célula atualmente apontada pelo \emph{olho}.
+
+\begin{wrapfigure}{r}{0.5\textwidth}
+  \small
+  \begin{center}
+    % BEGIN RECEIVE ORGTBL thenameofthetable
+\begin{tabular}{llll}
+\hline
+Objeto & Ação & Evento & Mov. \\
+ &  & saliente &  \\
+\hline
+alarme & - & \tmon\ & - \\
+ & - & \tmoff\ & - \\
+botão A & pressionar & \muon\ & - \\
+ & empurrar & - & V \\
+botão B & pressionar & \muoff\ & - \\
+ & empurrar & - & V \\
+bola & chutar &  & A \\
+interruptor & pressionar & \lion & - \\
+ & pressionar & \lioff & - \\
+sino & - & \beon\ & V \\
+\hline
+\end{tabular}
+    % END RECEIVE ORGTBL thenameofthetable
+  \end{center}
+  \tiny
+  \caption{Objetos presentes no domínio com as correspondentes ações e eventos salientes}
+  \label{fig:obj}
+\end{wrapfigure}
+Na tabela ao lado estão relacionados os objetos aí presentes,
+juntamente com as ações e o evento saliente que disparam.  Essas ações
+ficam disponíveis somente quando o \emph{olho} e a \emph{mão} estão
+sobre a célula em que se encontra o objeto.  Na coluna \emph{Mov.},
+objetos marcados com \emph{A} movem-se para a posição atual do
+\emph{alvo} e as marcadas com \emph{V} para uma célula vizinha
+aleatória ao serem ativados.  Caso a \emph{bola} seja chutada com o
+\emph{alvo} sobre o \emph{sino}, este é ativado, disparando o evento
+\beon.  O \emph{alarme} dispara quando o ocorre \beon\ a luz está
+ligada e a música desligada simultaneamente e é desativado quando o
+estado da luz ou da música é modificado; o agente somente consegue
+diferenciar os botões e agir sobre eles se a luz estiver ligada.
+
+Para avaliar o impacto da técnica de aprendizado proposta, foram
+realizados dois experimentos, sendo que em um deles o módulo de
+obtenção de políticas parciais a partir de \mi foi desativado.  A
+duração de cada experimento foi de $5e5$ passos, com o agente
+recebendo uma recompensa extrínseca para ocorrência de \mon\ no valor
+de 10 e recompensas intrínsecas para os demais eventos salientes no
+valor de 1. Os resultados estão presentes no gráfico da Figura
+\ref{fig:res}. 
 
 % 5e5 passos, não-episódico
 % valores dos parâmetros
 
 \newcommand{\mi}{MI}
 
-\newcommand{\mon}{$monkey_{ON}$} Para avaliar o impacto da utilização
-de \mi\ no aprendizado, foram realizados dois experimentos utilizando
-o algoritmo proposto, mas em um deles foi desativado o módulo de
-obtenção de políticas parciais a partir de \mi. A duração de cada
-experimento foi de $5e5$ passos, o agente recebendo uma recompensa
-extrínseca para ocorrência de \mon\ no valor de 10 e recompensas
-intrínsecas para os demais eventos salientes no valor de 1. Os
-resultados estão presentes no gráfico da \ref{fig:}
+\newcommand{\mon}{$monkey_{ON}$}
+
 
 nos quais um dos agentes utilizava o algoritmo proposto e o outro não
 agente dispõe de $5e5$ passos, sendo recompensado de 1 para ativações
@@ -665,9 +722,26 @@ algoritmo proposto.
 % \end{received}
 
 % INCLUDE BIBLIOGRAPHY WHICH MUST FOLLOW kdmile.bst TEMPLATE
-% \bibliographystyle{kdmile}
-% \bibliography{kdmile}
+\bibliographystyle{kdmile}
+\bibliography{kdmile}
 % For information on how to write bibliography entries, 
 % see file kdmileb.bib
 
 \end{document}
+
+#+ORGTBL: SEND thenameofthetable orgtbl-to-latex :splice nil :skip 0
+|-------------+------------+----------+------|
+| Objeto      | Ação       | Evento   | Mov. |
+|             |            | saliente |      |
+|-------------+------------+----------+------|
+| alarme      | -          | \tmon\   | -    |
+|             | -          | \tmoff\  | -    |
+| botão A     | pressionar | \muon\   | -    |
+|             | empurrar   | -        | V    |
+| botão B     | pressionar | \muoff\  | -    |
+|             | empurrar   | -        | V    |
+| bola        | chutar     |          | A    |
+| interruptor | pressionar | \lion    | -    |
+|             | pressionar | \lioff   | -    |
+| sino        | -          | \beon\   | V    |
+|-------------+------------+----------+------|
